--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"clsx": "^2.1.1",
 		"i18next": "^23.11.3",
 		"next": "14.2.3",
+		"postcss-apply": "^0.12.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-i18next": "^14.1.1",
